For oceanomics/ecotaxa_dev#435: Implement Edit or erase annotation on back-end. No test yet.
